Updated the nav bar and services page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3943,7 +3943,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color:  #78e5c7;
+  color:  #aad7d9;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -11341,7 +11341,7 @@ p {
 #mainNav {
   padding-top: 0;
   padding-bottom: 0;
-  background-color: #78e5c7;
+  background-color: #aad7d9;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -11389,7 +11389,7 @@ p {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #78e5c7;
+    background-color: #aad7d9;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
